--- a/index.html
+++ b/index.html
@@ -19,4 +19,8 @@
     </div>
 </body>
 
+<footer style="margin-top: 30px; padding: 20px; background: #333; color: white;">
+    <p>© 2025 DevOps Training Lab</p>
+</footer>
+
 </html>
